--- a/app/src/main/res/layout/tab1contacts.xml
+++ b/app/src/main/res/layout/tab1contacts.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.q.project1.MainActivity$SectionsPagerAdapter">
+    tools:context="com.example.q.CS496_proj2.MainActivity$SectionsPagerAdapter">
 
     <ListView
         android:id="@+id/contacts_listview"
