--- a/app/src/main/res/layout/tab1_2_contacts.xml
+++ b/app/src/main/res/layout/tab1_2_contacts.xml
@@ -5,9 +5,12 @@
     tools:context="com.example.q.CS496_proj2.Tab1_2Contacts">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp" />
 
 </FrameLayout>
