--- a/app/src/main/res/layout/tab1_2_contacts.xml
+++ b/app/src/main/res/layout/tab1_2_contacts.xml
@@ -13,4 +13,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listview2">
+    </ListView>
+
 </FrameLayout>
