--- a/app/src/main/res/layout/tab1_2_contacts.xml
+++ b/app/src/main/res/layout/tab1_2_contacts.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.q.CS496_proj2.Tab1_2Contacts">
+    tools:context="com.example.q.CS496_proj2.Tab1_2Contacts"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <com.facebook.login.widget.LoginButton
@@ -16,7 +17,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview2">
+        android:id="@+id/listview22">
     </ListView>
 
-</FrameLayout>
+</LinearLayout>
