--- a/app/src/main/res/layout/tab3game.xml
+++ b/app/src/main/res/layout/tab3game.xml
@@ -8,15 +8,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <!--<TextView-->
-    <!--android:id="@+id/stageTextView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textAlignment="center"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:text="SIMON!"-->
-    <!--style="@style/TextAppearance.AppCompat.Large"/>-->
+    <TextView
+        android:id="@+id/stageTextView"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:text="SIMON!"
+        android:textAlignment="center" />
 
     <LinearLayout
         android:id="@+id/gridViewLinearLayout"
