--- a/app/src/main/res/layout/tab3game.xml
+++ b/app/src/main/res/layout/tab3game.xml
@@ -8,16 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/stageTextView"
-        style="@style/TextAppearance.AppCompat.Large"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="SIMON!"
-        android:textAlignment="center" />
-
     <LinearLayout
         android:id="@+id/gridViewLinearLayout"
         android:layout_width="match_parent"
@@ -31,6 +21,15 @@
             android:numColumns="2" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/stageTextView"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SIMON!"
+        android:textAlignment="center"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/startButton"
